@@ -100,7 +100,8 @@ agreg.fit <- function(x, y, strata, offset, init, control,
                    as.integer(method=="efron"),
                    as.integer(maxiter), 
                    as.double(control$eps),
-                   as.double(control$toler.chol))
+                   as.double(control$toler.chol),
+                   as.integer(1)) # internally rescale
     <<agreg-fixup>>
     <<agreg-finish>>
 }  
@@ -190,15 +191,17 @@ and makes for more readable code.
 SEXP agfit4(SEXP surv2,      SEXP covar2,    SEXP strata2,
 	    SEXP weights2,  SEXP offset2,    SEXP ibeta2,
 	    SEXP sort12,     SEXP sort22,    SEXP method2,
-	    SEXP maxiter2,   SEXP  eps2,     SEXP tolerance2) { 
+	    SEXP maxiter2,   SEXP  eps2,     SEXP tolerance2,
+	    SEXP doscale2) { 
 
     int i,j,k,person;
     int indx2, istrat, p;
     int ksave, nrisk, ndeath;
     int nused, nvar;
-
+ 
     double **covar, **cmat, **imat;  /*ragged array versions*/
     double *a, *oldbeta, *maxbeta;
+    double *scale;
     double *a2, **cmat2;
     double *eta;
     double  denom, zbeta, risk;
@@ -217,6 +220,7 @@ SEXP agfit4(SEXP surv2,      SEXP covar2,    SEXP strata2,
     int *sort1, *sort2, maxiter;
     int *strata;
     double method;  /* saving this as double forces some double arithmetic */
+    int doscale;
 
     /* returned objects */
     SEXP imat2, means2, beta2, u2, loglik2;
@@ -236,6 +240,7 @@ SEXP agfit4(SEXP surv2,      SEXP covar2,    SEXP strata2,
     eps   = asReal(eps2);
     tol_chol = asReal(tolerance2);
     maxiter = asInteger(maxiter2);
+    doscale = asInteger(doscale2);
   
     /* input arguments */
     start = REAL(surv2);
@@ -249,15 +254,16 @@ SEXP agfit4(SEXP surv2,      SEXP covar2,    SEXP strata2,
 
     /*
     ** scratch space
-    **  nvar: a, a2, newbeta, maxbeta
+    **  nvar: a, a2, newbeta, maxbeta, scale
     **  nvar*nvar: cmat, cmat2
     **  n: eta
     */
-    eta = (double *) R_alloc(nused + 4*nvar + 2*nvar*nvar, sizeof(double));
+    eta = (double *) R_alloc(nused + 5*nvar + 2*nvar*nvar, sizeof(double));
     a = eta + nused;
     a2 = a +nvar;
     maxbeta = a2 + nvar;
-    oldbeta = maxbeta + nvar;
+    scale  = maxbeta + nvar;
+    oldbeta = scale + nvar;   
 
     /*
     **  Set up the ragged arrays
@@ -305,14 +311,59 @@ SEXP agfit4(SEXP surv2,      SEXP covar2,    SEXP strata2,
     ** Subtract the mean from each covar, as this makes the variance
     **  computation much more stable
     */
+    temp2 =0;
+    for (i=0; i<nused; i++) temp2 += weights[i];  /* sum of weights */
+
     for (i=0; i<nvar; i++) {
+        maxbeta[i] = 0;  /* temporary, save the max abs covariate value */
 	temp=0;
-	for (person=0; person<nused; person++) temp += covar[i][person];
-	temp /= nused;
+	for (person=0; person<nused; person++)
+            temp += weights[i] * covar[i][person];
+	temp /= temp2;
 	means[i] = temp;
 	for (person=0; person<nused; person++)
 	    covar[i][person] -=temp;
-        }
+        if (doscale ==1) { /* also scale the regression */
+	    temp =0;
+	    for (person=0; person<nused; person++)
+		temp += weights[person] * fabs(covar[i][person]);
+	    if (temp >0) temp = temp2/temp;
+	    else temp = 1.0;  /* rare case of a constant covariate */
+            scale[i] = temp;
+	    for (person=0; person<nused; person++) {
+		covar[i][person] *= temp;
+		if (fabs(covar[i][person]) > maxbeta[i])
+		    maxbeta[i] = fabs(covar[i][person]);
+	    }
+	} else {
+	    /* scaling is only turned off during debugging 
+	       still, cover the case */
+	    for (person=0; person<nused; person++) {
+		if (fabs(covar[i][person]) > maxbeta[i])
+		    maxbeta[i] = fabs(covar[i][person]);
+	    }
+	}
+    }
+ 
+    if (doscale ==1) {
+	for (i=0; i<nvar; i++) beta[i] /= scale[i]; /* rescale initial betas */
+	}
+    else {for (i=0; i<nvar; i++) scale[i] = 1.0;}
+    
+    /* 
+    **	Set the max beta.  For safety we want beta*x < log(max double) so 
+    **  the the risk score exp(x beta) never becomes either infinite or 0.
+    **  This limit is around 700 for most hardware.  Since exp(23) > population
+    **  of the earth, any beta*x over 20 is a silly relative risk for a Cox
+    **  model, however.  
+    **   We want to cut off huge values, but not take action very often since
+    **  doing so can mess up the iteration in general.
+    **  One of the case-cohort papers suggests using anoffset of -100 to 
+    **  indicate "no risk", meaning that x*beta values of 50-100 can occur 
+    **  in "ok" data sets.  Compromise.
+    */
+    for (i=0; i<nvar; i++) maxbeta[i] = 200/maxbeta[i];
+
     ndeath =0;
     for (i=0; i<nused; i++) ndeath += event[i];
     
@@ -586,10 +637,6 @@ $k$ is large one should not be using a Breslow approximation.
 loglik[0] = newlk;   /* save the loglik for iteration zero  */
 loglik[1] = newlk;
 
-/* Use the initial variance matrix to set a maximum coefficient */
-for (i=0; i<nvar; i++) 
-    maxbeta[i] = 23/ sqrt(imat[i][i]/ndeath);
-
 /* Calculate the score test */
 for (i=0; i<nvar; i++) /*use 'a' as a temp to save u0, for the score test*/
     a[i] = u[i];
@@ -695,9 +742,15 @@ release memory and return.
 <<agfit4-finish>>= 
 loglik[1] = newlk;
 chinv2(imat, nvar);
-for (i=1; i<nvar; i++)
-    for (j=0; j<i; j++)  imat[i][j] = imat[j][i];
-
+for (i=0; i<nvar; i++) {
+    beta[i] *= scale[i];  /* return to original scale */
+    u[i] /= scale[i];
+    imat[i][i] *= scale[i] * scale[i];
+    for (j=0; j<i; j++) {
+	imat[j][i] *= scale[i] * scale[j];
+	imat[i][j] = imat[j][i];
+    }
+}
 UNPROTECT(nprotect);
 return(rlist);
 @ 
